@@ -1,2 +1,2 @@
 cd /d "%~dp0"
-java --module-path ./javafx-sdk-25.0.1/lib --add-modules=javafx.controls,javafx.fxml -jar ./UMLProject.jar -terminal
+UMLProject.exe -terminal
